--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,8 +56,15 @@ jobs:
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
-          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker-compose stop
+          sudo docker-compose down -v
+          touch .env
+          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           sudo docker-compose up -d
           sudo docker-compose run web python manage.py migrate
           sudo docker-compose run web python manage.py collectstatic --no-input
